--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,30 @@ body {
     border-radius: 20px;
   }
 
+  .add-form-auth {
+    height: 50px;
+    box-sizing: border-box;
+    background: radial-gradient(
+      75.42% 75.42% at 50% 42.37%,
+      rgba(53, 53, 53, 0) 22.92%,
+      #7334ea 100%
+    );
+    filter: drop-shadow(0px 20px 67px rgba(0, 0, 0, 0.08));
+    border-radius: 20px;
+  }
+
+  .auth-form{
+    display: flex;
+  }
+
+  .login-link{
+    cursor: pointer; 
+  }
+
+  .login-link:hover{
+    color: rgb(165, 80, 249);
+  }
+
   .comments {
     display: flex;
     flex-direction: column;
