--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,56 @@
 body {
     margin: 0;
-  }
+}
 
-  .error {
+.error {
     background-color: red;
-  }
+}
 
-  .hide {
+.hide {
     display: none;
-  }
-
-.preloader{
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #222222;
-  z-index: 2;
 }
 
-.preloader__loader{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.preloader {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #222222;
+    z-index: 2;
 }
 
-  .spinner {
+.preloader__loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.spinner {
     width: 56px;
     height: 56px;
     border-radius: 50%;
-    background: conic-gradient(#000000 10%,#474bff);
-    -webkit-mask: radial-gradient(farthest-side,#0000 calc(100% - 9px),#000 0);
+    background: conic-gradient(#000000 10%, #474bff);
+    -webkit-mask: radial-gradient(
+        farthest-side,
+        #0000 calc(100% - 9px),
+        #000 0
+    );
     animation: spinner-zp9dbg 1s infinite linear;
- }
- 
- @keyframes spinner-zp9dbg {
+}
+
+@keyframes spinner-zp9dbg {
     to {
-       transform: rotate(1turn);
+        transform: rotate(1turn);
     }
- }
+}
 
- .hide{
-  display: none;
- }
+.hide {
+    display: none;
+}
 
-  .container {
+.container {
     font-family: Helvetica;
     color: #ffffff;
     display: flex;
@@ -56,141 +60,141 @@ body {
     padding-bottom: 200px;
     background: #202020;
     min-height: 100vh;
-  }
+}
 
-  .comments,
-  .comment {
+.comments,
+.comment {
     margin: 0;
     padding: 0;
     list-style: none;
-  }
+}
 
-  .comment,
-  .add-form {
+.comment,
+.add-form {
     width: 596px;
     box-sizing: border-box;
     background: radial-gradient(
-      75.42% 75.42% at 50% 42.37%,
-      rgba(53, 53, 53, 0) 22.92%,
-      #7334ea 100%
+        75.42% 75.42% at 50% 42.37%,
+        rgba(53, 53, 53, 0) 22.92%,
+        #7334ea 100%
     );
     filter: drop-shadow(0px 20px 67px rgba(0, 0, 0, 0.08));
     border-radius: 20px;
-  }
+}
 
-  .add-form-auth {
+.add-form-auth {
     height: 50px;
     box-sizing: border-box;
     background: radial-gradient(
-      75.42% 75.42% at 50% 42.37%,
-      rgba(53, 53, 53, 0) 22.92%,
-      #7334ea 100%
+        75.42% 75.42% at 50% 42.37%,
+        rgba(53, 53, 53, 0) 22.92%,
+        #7334ea 100%
     );
     filter: drop-shadow(0px 20px 67px rgba(0, 0, 0, 0.08));
     border-radius: 20px;
-  }
+}
 
-  .auth-form{
+.auth-form {
     display: flex;
-  }
+}
 
-  .login-link{
-    cursor: pointer; 
-  }
+.login-link {
+    cursor: pointer;
+}
 
-  .login-link:hover{
+.login-link:hover {
     color: rgb(165, 80, 249);
-  }
+}
 
-  .comments {
+.comments {
     display: flex;
     flex-direction: column;
     gap: 24px;
-  }
+}
 
-  .comment {
+.comment {
     padding: 48px;
-  }
+}
 
-  .comment-header {
+.comment-header {
     font-size: 16px;
     display: flex;
     justify-content: space-between;
-  }
+}
 
-  .comment-footer {
+.comment-footer {
     display: flex;
     justify-content: flex-end;
-  }
+}
 
-  .comment-body {
+.comment-body {
     margin-top: 32px;
     margin-bottom: 32px;
-  }
+}
 
-  .comment-text {
+.comment-text {
     font-size: 32px;
-  }
+}
 
-  .likes {
+.likes {
     display: flex;
     align-items: center;
-  }
+}
 
-  .like-button {
+.like-button {
     all: unset;
     cursor: pointer;
-  }
+}
 
-  .likes-counter {
+.likes-counter {
     font-size: 26px;
     margin-right: 8px;
-  }
+}
 
-  .like-button {
+.like-button {
     margin-left: 10px;
     background-image: url("data:image/svg+xml,%3Csvg width='22' height='20' viewBox='0 0 22 20' fill='none' xmlns='http://www.w3.org/2000/svg' %3E%3Cpath d='M11.11 16.9482L11 17.0572L10.879 16.9482C5.654 12.2507 2.2 9.14441 2.2 5.99455C2.2 3.81471 3.85 2.17984 6.05 2.17984C7.744 2.17984 9.394 3.26975 9.977 4.75204H12.023C12.606 3.26975 14.256 2.17984 15.95 2.17984C18.15 2.17984 19.8 3.81471 19.8 5.99455C19.8 9.14441 16.346 12.2507 11.11 16.9482ZM15.95 0C14.036 0 12.199 0.882834 11 2.26703C9.801 0.882834 7.964 0 6.05 0C2.662 0 0 2.6267 0 5.99455C0 10.1035 3.74 13.4714 9.405 18.5613L11 20L12.595 18.5613C18.26 13.4714 22 10.1035 22 5.99455C22 2.6267 19.338 0 15.95 0Z' fill='%23BCEC30' /%3E%3C/svg%3E");
     background-repeat: no-repeat;
     width: 22px;
     height: 22px;
-  }
+}
 
-  .-active-like {
+.-active-like {
     background-image: url("data:image/svg+xml,%3Csvg width='22' height='20' viewBox='0 0 22 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.95 0C14.036 0 12.199 0.882834 11 2.26703C9.801 0.882834 7.964 0 6.05 0C2.662 0 0 2.6267 0 5.99455C0 10.1035 3.74 13.4714 9.405 18.5613L11 20L12.595 18.5613C18.26 13.4714 22 10.1035 22 5.99455C22 2.6267 19.338 0 15.95 0Z' fill='%23BCEC30'/%3E%3C/svg%3E");
-  }
+}
 
-  .add-form {
+.add-form {
     padding: 20px;
     margin-top: 48px;
     display: flex;
     flex-direction: column;
-  }
+}
 
-  .add-form-name,
-  .add-form-text {
+.add-form-name,
+.add-form-text {
     font-size: 16px;
     font-family: Helvetica;
     border-radius: 8px;
     border: none;
-  }
+}
 
-  .add-form-name {
+.add-form-name {
     width: 300px;
     padding: 11px 22px;
-  }
+}
 
-  .add-form-text {
+.add-form-text {
     margin-top: 12px;
     padding: 22px;
     resize: none;
-  }
+}
 
-  .add-form-row {
+.add-form-row {
     display: flex;
     justify-content: flex-end;
-  }
+}
 
-  .add-form-button {
+.add-form-button {
     margin-top: 24px;
     font-size: 24px;
     padding: 10px 20px;
@@ -198,140 +202,140 @@ body {
     border: none;
     border-radius: 18px;
     cursor: pointer;
-  }
+}
 
-  .add-form-button:hover {
+.add-form-button:hover {
     opacity: 0.9;
-  }
+}
 
-  .comments,
-  .comment {
+.comments,
+.comment {
     margin: 0;
     padding: 0;
     list-style: none;
-  }
+}
 
-  .comment,
-  .add-form {
+.comment,
+.add-form {
     width: 596px;
     box-sizing: border-box;
     background: radial-gradient(
-      75.42% 75.42% at 50% 42.37%,
-      rgba(53, 53, 53, 0) 22.92%,
-      #7334ea 100%
+        75.42% 75.42% at 50% 42.37%,
+        rgba(53, 53, 53, 0) 22.92%,
+        #7334ea 100%
     );
     filter: drop-shadow(0px 20px 67px rgba(0, 0, 0, 0.08));
     border-radius: 20px;
-  }
+}
 
-  .comments {
+.comments {
     display: flex;
     flex-direction: column;
     gap: 24px;
-  }
+}
 
-  .comment {
+.comment {
     padding: 48px;
-  }
+}
 
-  .comment-header {
+.comment-header {
     font-size: 16px;
     display: flex;
     justify-content: space-between;
-  }
+}
 
-  .comment-footer {
+.comment-footer {
     display: flex;
     justify-content: flex-end;
-  }
+}
 
-  .comment-body {
+.comment-body {
     margin-top: 32px;
     margin-bottom: 32px;
-  }
+}
 
-  .comment-text {
+.comment-text {
     font-size: 32px;
-  }
+}
 
-  .likes {
+.likes {
     display: flex;
     align-items: center;
-  }
+}
 
-  .like-button {
+.like-button {
     all: unset;
     cursor: pointer;
-  }
+}
 
-  .likes-counter {
+.likes-counter {
     font-size: 26px;
     margin-right: 8px;
-  }
+}
 
-  .like-button {
+.like-button {
     margin-left: 10px;
     background-image: url("data:image/svg+xml,%3Csvg width='22' height='20' viewBox='0 0 22 20' fill='none' xmlns='http://www.w3.org/2000/svg' %3E%3Cpath d='M11.11 16.9482L11 17.0572L10.879 16.9482C5.654 12.2507 2.2 9.14441 2.2 5.99455C2.2 3.81471 3.85 2.17984 6.05 2.17984C7.744 2.17984 9.394 3.26975 9.977 4.75204H12.023C12.606 3.26975 14.256 2.17984 15.95 2.17984C18.15 2.17984 19.8 3.81471 19.8 5.99455C19.8 9.14441 16.346 12.2507 11.11 16.9482ZM15.95 0C14.036 0 12.199 0.882834 11 2.26703C9.801 0.882834 7.964 0 6.05 0C2.662 0 0 2.6267 0 5.99455C0 10.1035 3.74 13.4714 9.405 18.5613L11 20L12.595 18.5613C18.26 13.4714 22 10.1035 22 5.99455C22 2.6267 19.338 0 15.95 0Z' fill='%23BCEC30' /%3E%3C/svg%3E");
     background-repeat: no-repeat;
     width: 22px;
     height: 22px;
-  }
+}
 
-  .-active-like {
+.-active-like {
     background-image: url("data:image/svg+xml,%3Csvg width='22' height='20' viewBox='0 0 22 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.95 0C14.036 0 12.199 0.882834 11 2.26703C9.801 0.882834 7.964 0 6.05 0C2.662 0 0 2.6267 0 5.99455C0 10.1035 3.74 13.4714 9.405 18.5613L11 20L12.595 18.5613C18.26 13.4714 22 10.1035 22 5.99455C22 2.6267 19.338 0 15.95 0Z' fill='%23BCEC30'/%3E%3C/svg%3E");
-  }
+}
 
-  .add-form {
+.add-form {
     padding: 20px;
     margin-top: 48px;
     display: flex;
     flex-direction: column;
-  }
+}
 
-  .add-form-name,
-  .add-form-text {
+.add-form-name,
+.add-form-text {
     font-size: 16px;
     font-family: Helvetica;
     border-radius: 8px;
     border: none;
-  }
+}
 
-  .add-form-login,
-  .add-form-password {
+.add-form-login,
+.add-form-password {
     font-size: 16px;
     font-family: Helvetica;
     border-radius: 8px;
     border: none;
-  }
+}
 
-  .add-form-name {
+.add-form-name {
     width: 300px;
     padding: 11px 22px;
-  }
+}
 
-  .add-form-login {
+.add-form-login {
     height: 18px;
     padding: 11px 22px;
-  }
+}
 
-  .add-form-password {
+.add-form-password {
     height: 18px;
     padding: 11px 22px;
     margin-top: 10px;
-  }
+}
 
-  .add-form-text {
+.add-form-text {
     margin-top: 12px;
     padding: 22px;
     resize: none;
-  }
+}
 
-  .add-form-row {
+.add-form-row {
     display: flex;
     justify-content: flex-end;
-  }
+}
 
-  .add-form-button {
+.add-form-button {
     margin-top: 24px;
     font-size: 24px;
     padding: 10px 20px;
@@ -340,12 +344,12 @@ body {
     border-radius: 18px;
     cursor: pointer;
     margin-right: 10px;
-  }
+}
 
-  .add-form-button:hover {
+.add-form-button:hover {
     opacity: 0.9;
-  }
+}
 
-  .auth-form{
-    margin:20px;
-  }
+.auth-form {
+    margin: 20px;
+}
